lexparse/BarnematParser.java
// Generated from Barnemat.g4 by ANTLR 4.9.2
package lexparse; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BarnematParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, ID=29, Bokstav=30, Setning=31, 
		Heltall=32, Desimaltall=33, Sannhet=34, Ganging=35, Deling=36, Pluss=37, 
		Minus=38, StørreEnn=39, MindreEnn=40, Lik=41, Ulik=42, ESC=43, Intet=44, 
		WS=45, SL_COMMENT=46, ML_COMMENT=47;
	public static final int
		RULE_fil = 0, RULE_hoveddel = 1, RULE_argument = 2, RULE_testMetode = 3, 
		RULE_variabelErklæring = 4, RULE_variabel = 5, RULE_variabeltype = 6, 
		RULE_verdiTildeling = 7, RULE_utskrift = 8, RULE_les = 9, RULE_uttrykk = 10, 
		RULE_entenEller = 11, RULE_sammenlikningEnten = 12, RULE_løkke1 = 13, 
		RULE_løkke2 = 14, RULE_sammenlikningLøkke1 = 15, RULE_sammenlikningLøkke2 = 16, 
		RULE_sammenliknbar = 17, RULE_sammenlikn = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"fil", "hoveddel", "argument", "testMetode", "variabelErklæring", "variabel", 
			"variabeltype", "verdiTildeling", "utskrift", "les", "uttrykk", "entenEller", 
			"sammenlikningEnten", "løkke1", "løkke2", "sammenlikningLøkke1", "sammenlikningLøkke2", 
			"sammenliknbar", "sammenlikn"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Program'", "'Start{'", "'}Slutt'", "'Test;'", "':='", "';'", 
			"'Heltall'", "'Desimaltall'", "'Setning'", "'Sannhet'", "'Angi'", "'Skriv ut'", 
			"':'", "'Skriv inn'", "'('", "')'", "'Dersom'", "'s\u00E5'", "'{'", "'}'", 
			"'ellers'", "'!'", "'Gjenta'", "'Medan'", "'Mens'", "'medan'", "'mens'", 
			"'gjenta'", null, null, null, null, null, null, "'*'", "'/'", "'+'", 
			"'-'", "'>'", "'<'", "'='", "'!='", null, "'Null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "ID", "Bokstav", "Setning", "Heltall", 
			"Desimaltall", "Sannhet", "Ganging", "Deling", "Pluss", "Minus", "St\u0002rreEnn", 
			"MindreEnn", "Lik", "Ulik", "ESC", "Intet", "WS", "SL_COMMENT", "ML_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Barnemat.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BarnematParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FilContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public HoveddelContext hoveddel() {
			return getRuleContext(HoveddelContext.class,0);
		}
		public FilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fil; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterFil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitFil(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitFil(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilContext fil() throws RecognitionException {
		FilContext _localctx = new FilContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fil);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			match(ID);
			setState(40);
			hoveddel();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HoveddelContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public HoveddelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hoveddel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterHoveddel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitHoveddel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitHoveddel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HoveddelContext hoveddel() throws RecognitionException {
		HoveddelContext _localctx = new HoveddelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_hoveddel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__1);
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				argument();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__16) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26))) != 0) );
			setState(48);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public VariabelErklæringContext variabelErklæring() {
			return getRuleContext(VariabelErklæringContext.class,0);
		}
		public VerdiTildelingContext verdiTildeling() {
			return getRuleContext(VerdiTildelingContext.class,0);
		}
		public EntenEllerContext entenEller() {
			return getRuleContext(EntenEllerContext.class,0);
		}
		public Løkke1Context løkke1() {
			return getRuleContext(Løkke1Context.class,0);
		}
		public Løkke2Context løkke2() {
			return getRuleContext(Løkke2Context.class,0);
		}
		public UtskriftContext utskrift() {
			return getRuleContext(UtskriftContext.class,0);
		}
		public LesContext les() {
			return getRuleContext(LesContext.class,0);
		}
		public TestMetodeContext testMetode() {
			return getRuleContext(TestMetodeContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argument);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
			case T__8:
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				variabelErklæring();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				verdiTildeling();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				entenEller();
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				løkke1();
				}
				break;
			case T__23:
			case T__24:
			case T__25:
			case T__26:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				løkke2();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				utskrift();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 7);
				{
				setState(56);
				les();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 8);
				{
				setState(57);
				testMetode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestMetodeContext extends ParserRuleContext {
		public TestMetodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testMetode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterTestMetode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitTestMetode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitTestMetode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestMetodeContext testMetode() throws RecognitionException {
		TestMetodeContext _localctx = new TestMetodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_testMetode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariabelErklæringContext extends ParserRuleContext {
		public VariabelContext variabel() {
			return getRuleContext(VariabelContext.class,0);
		}
		public UttrykkContext uttrykk() {
			return getRuleContext(UttrykkContext.class,0);
		}
		public VariabelErklæringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabelErklæring; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterVariabelErklæring(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitVariabelErklæring(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitVariabelErklæring(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabelErklæringContext variabelErklæring() throws RecognitionException {
		VariabelErklæringContext _localctx = new VariabelErklæringContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variabelErklæring);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			variabel();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(63);
				match(T__4);
				{
				setState(64);
				uttrykk(0);
				}
				}
			}

			setState(67);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariabelContext extends ParserRuleContext {
		public VariabeltypeContext variabeltype() {
			return getRuleContext(VariabeltypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public VariabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterVariabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitVariabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitVariabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabelContext variabel() throws RecognitionException {
		VariabelContext _localctx = new VariabelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variabel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			variabeltype();
			setState(70);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariabeltypeContext extends ParserRuleContext {
		public VariabeltypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabeltype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterVariabeltype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitVariabeltype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitVariabeltype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabeltypeContext variabeltype() throws RecognitionException {
		VariabeltypeContext _localctx = new VariabeltypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variabeltype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerdiTildelingContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public UttrykkContext uttrykk() {
			return getRuleContext(UttrykkContext.class,0);
		}
		public VerdiTildelingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verdiTildeling; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterVerdiTildeling(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitVerdiTildeling(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitVerdiTildeling(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerdiTildelingContext verdiTildeling() throws RecognitionException {
		VerdiTildelingContext _localctx = new VerdiTildelingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_verdiTildeling);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__10);
			setState(75);
			match(ID);
			setState(76);
			match(T__4);
			{
			setState(77);
			uttrykk(0);
			}
			setState(78);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UtskriftContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public TerminalNode Setning() { return getToken(BarnematParser.Setning, 0); }
		public UtskriftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_utskrift; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterUtskrift(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitUtskrift(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitUtskrift(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UtskriftContext utskrift() throws RecognitionException {
		UtskriftContext _localctx = new UtskriftContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_utskrift);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__11);
			setState(81);
			match(T__12);
			setState(82);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==Setning) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(83);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LesContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public LesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_les; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterLes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitLes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitLes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LesContext les() throws RecognitionException {
		LesContext _localctx = new LesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_les);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__13);
			setState(86);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UttrykkContext extends ParserRuleContext {
		public UttrykkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uttrykk; }
	 
		public UttrykkContext() { }
		public void copyFrom(UttrykkContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GangingContext extends UttrykkContext {
		public List<UttrykkContext> uttrykk() {
			return getRuleContexts(UttrykkContext.class);
		}
		public UttrykkContext uttrykk(int i) {
			return getRuleContext(UttrykkContext.class,i);
		}
		public TerminalNode Ganging() { return getToken(BarnematParser.Ganging, 0); }
		public GangingContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterGanging(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitGanging(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitGanging(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetningContext extends UttrykkContext {
		public TerminalNode Setning() { return getToken(BarnematParser.Setning, 0); }
		public SetningContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterSetning(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitSetning(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitSetning(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PlussContext extends UttrykkContext {
		public List<UttrykkContext> uttrykk() {
			return getRuleContexts(UttrykkContext.class);
		}
		public UttrykkContext uttrykk(int i) {
			return getRuleContext(UttrykkContext.class,i);
		}
		public TerminalNode Pluss() { return getToken(BarnematParser.Pluss, 0); }
		public PlussContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterPluss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitPluss(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitPluss(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DesimaltallContext extends UttrykkContext {
		public TerminalNode Desimaltall() { return getToken(BarnematParser.Desimaltall, 0); }
		public DesimaltallContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterDesimaltall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitDesimaltall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitDesimaltall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IDContext extends UttrykkContext {
		public TerminalNode ID() { return getToken(BarnematParser.ID, 0); }
		public IDContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitID(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DelingContext extends UttrykkContext {
		public List<UttrykkContext> uttrykk() {
			return getRuleContexts(UttrykkContext.class);
		}
		public UttrykkContext uttrykk(int i) {
			return getRuleContext(UttrykkContext.class,i);
		}
		public TerminalNode Deling() { return getToken(BarnematParser.Deling, 0); }
		public DelingContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterDeling(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitDeling(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitDeling(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParentesContext extends UttrykkContext {
		public UttrykkContext uttrykk() {
			return getRuleContext(UttrykkContext.class,0);
		}
		public ParentesContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterParentes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitParentes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitParentes(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class HeltallContext extends UttrykkContext {
		public TerminalNode Heltall() { return getToken(BarnematParser.Heltall, 0); }
		public HeltallContext(UttrykkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).enterHeltall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BarnematListener ) ((BarnematListener)listener).exitHeltall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BarnematVisitor ) return ((BarnematVisitor<? extends T>)visitor).visitHeltall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MinusContext extends UttrykkContext {
